--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
       - /run/udev:/run/udev:ro
     ports:
       # Frontend port
-      - 8081:8080
+      - ${FRONTEND_PORT}:8080
     environment:
       - TZ=Europe/Warsaw
       - ZIGBEE2MQTT_CONFIG_MQTT_USER=${ZIGBEE2MQTT_CONFIG_MQTT_USER}
-      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD=${ZIGBEE2MQTT_CONFIG_MQTT_USER}
+      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD=${ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD}
+      - ZIGBEE2MQTT_CONFIG_MQTT_SERVER=${ZIGBEE2MQTT_CONFIG_MQTT_SERVER}
     devices:
       # Make sure this matched your adapter location
       - /dev/ttyUSB0:/dev/ttyACM0
