Modified env variable to be optional and allow prod tenant not contain _ prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   zigbee2mqtt:
-    container_name: ${ENV}_zigbee2mqtt
+    container_name: ${ENV}zigbee2mqtt
     image: koenkk/zigbee2mqtt
     restart: unless-stopped
     volumes:
